<resources>
    <string name="app_name">힐링하이</string>
    <string name="HealMent">힐링명언</string>
    <string name="love">연애</string>
    <string name="life">인생</string>
    <string name="friend">우정</string>
    <string name="mng">경영</string>
    <string name="book">책</string>
    <string name="humor">유머</string>
    <string name="mainlogo">메인로고</string>
    <string name="menubtn">메뉴버튼</string>
    <string name="sharebtn">공유버튼</string>
    <string name="likebtn">좋아요버튼</string>
    <string name="downbtn">다운버튼</string>\
    <string name="box"><u>보관함</u></string>
</resources>