<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/likelayout"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:ignore="missingPrefix">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/nextlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:onClick="nextMent">

        <!--        <TextView-->
        <!--            android:id="@+id/textView2"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginBottom="76dp"-->
        <!--            android:fontFamily="@font/kopub_medium"-->
        <!--            android:gravity="center"-->
        <!--            android:text="❝"-->
        <!--            android:textSize="15sp"-->
        <!--            app:layout_constraintBottom_toTopOf="@+id/maintxt"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent" />-->

        <!--        <TextView-->
        <!--            android:id="@+id/textView3"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="60dp"-->
        <!--            android:fontFamily="@font/kopub_medium"-->
        <!--            android:gravity="center"-->
        <!--            android:text="❞"-->
        <!--            android:textSize="15sp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintHorizontal_bias="0.498"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/maintxt" />-->

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginLeft="10dp"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/menubtn"
                android:layout_width="65dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="#00000000"
                android:contentDescription="@string/menubtn"
                android:onClick="btnOnclick"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/menu"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="6" />

            <ImageButton
                android:id="@+id/likebtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="@string/likebtn"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/unheart"
                android:onClick="UpdateData"
                tools:ignore="ImageContrastCheck" />

            <ImageButton
                android:id="@+id/screenshotbtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="@string/downbtn"
                android:onClick="SreenshotButton"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/download" />

            <ImageButton
                android:id="@+id/sharebtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#00000000"
                android:contentDescription="@string/sharebtn"
                android:onClick="ShareMent"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/share"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <TextView
            android:id="@+id/maintxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="142dp"
            android:layout_marginTop="208dp"
            android:layout_marginEnd="142dp"
            android:fontFamily="@font/kopub_medium"
            android:gravity="center"
            android:text="네 자신을 알라"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.516"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <TextView
            android:id="@+id/mainauthor"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="201dp"
            android:layout_marginBottom="148dp"
            android:fontFamily="@font/kopub_medium"
            android:text="소크라테스"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maintxt" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include layout="@layout/navbar_like" />
</androidx.drawerlayout.widget.DrawerLayout>